wider side drawer

--- a/components/side-drawer/src/vwc-side-drawer.scss
+++ b/components/side-drawer/src/vwc-side-drawer.scss
@@ -12,6 +12,7 @@ aside {
 
 .side-drawer {
 	position: relative;
+	width: 240px;
 	height: 100%;
 	margin: 0;
 	background-color: var(--vvd-color-base);
