--- a/components/expansion-panel/src/vwc-expansion-panel.scss
+++ b/components/expansion-panel/src/vwc-expansion-panel.scss
@@ -28,6 +28,7 @@
 
 .expansion-panel-header {
 	@include typography.typography-cat-shorthand('subtitle-2');
+	all: unset;
 	position: relative;
 	display: flex;
 	align-items: center;
