--- a/components/side-drawer/src/vwc-side-drawer.scss
+++ b/components/side-drawer/src/vwc-side-drawer.scss
@@ -1,19 +1,20 @@
 $vvd-side-drawer--padding: --vvd-side-drawer--padding;
-// $vvd-side-drawer--inline-size: --vvd-side-drawer--inline-size;
+$vvd-side-drawer--min-inline-size: --vvd-side-drawer--min-inline-size;
+
+$min-width: 280px;
 
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-typography/scss/typography' as typography;
 
 :host {
 	#{$vvd-side-drawer--padding}: 16px;
-	// #{$vvd-side-drawer--inline-size}: 280px;
-	display: flex;
-	min-inline-size: 280px;
+	// display: flex;
+	// min-inline-size: 280px;
 }
 
 .side-drawer {
 	block-size: 100%;
-	min-inline-size: 100%;
+	min-inline-size: var(#{$vvd-side-drawer--min-inline-size}, $min-width);
 	// box-sizing: border-box;
 	// padding: 10px;
 	// margin: 0;
@@ -41,5 +42,5 @@ $vvd-side-drawer--padding: --vvd-side-drawer--padding;
 
 .vwc-surface {
 	--mdc-menu-max-height: 100%;
-	--mdc-menu-min-width: fit-content;
+	--mdc-menu-min-width: var(#{$vvd-side-drawer--min-inline-size}, $min-width);
 }
