--- a/components/side-drawer/src/vwc-side-drawer.scss
+++ b/components/side-drawer/src/vwc-side-drawer.scss
@@ -1,23 +1,20 @@
 $vvd-side-drawer--padding: --vvd-side-drawer--padding;
 $vvd-side-drawer--min-inline-size: --vvd-side-drawer--min-inline-size;
 
+$padding-default: var(#{$vvd-side-drawer--padding}, 16px);
 $min-width: 280px;
 
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-typography/scss/typography' as typography;
 
 :host {
-	#{$vvd-side-drawer--padding}: 16px;
-	// display: flex;
-	// min-inline-size: 280px;
+	display: flex;
+	block-size: 100%;
 }
 
 .side-drawer {
-	block-size: 100%;
 	min-inline-size: var(#{$vvd-side-drawer--min-inline-size}, $min-width);
-	// box-sizing: border-box;
-	// padding: 10px;
-	// margin: 0;
+
 	&:not(.vvd-side-drawer--alternate):not(.vvd-side-drawer--modal) {
 		background-color: var(#{scheme-variables.$vvd-color-neutral-10});
 	}
@@ -31,13 +28,13 @@ $min-width: 280px;
 	display: flex;
 	align-items: center;
 	block-size: 64px;
-	padding-inline-end: var(#{$vvd-side-drawer--padding}--top-bar, var(#{$vvd-side-drawer--padding}));
-	padding-inline-start: var(#{$vvd-side-drawer--padding}--top-bar, var(#{$vvd-side-drawer--padding}));
+	padding-inline-end: var(#{$vvd-side-drawer--padding}--top-bar, #{$padding-default});
+	padding-inline-start: var(#{$vvd-side-drawer--padding}--top-bar, #{$padding-default});
 }
 
 .vvd-side-drawer--content {
-	padding-inline-end: var(#{$vvd-side-drawer--padding}--content, var(#{$vvd-side-drawer--padding}));
-	padding-inline-start: var(#{$vvd-side-drawer--padding}--content, var(#{$vvd-side-drawer--padding}));
+	padding-inline-end: var(#{$vvd-side-drawer--padding}--content, #{$padding-default});
+	padding-inline-start: var(#{$vvd-side-drawer--padding}--content, #{$padding-default});
 }
 
 .vwc-surface {
