--- a/components/dialog/src/vwc-dialog.scss
+++ b/components/dialog/src/vwc-dialog.scss
@@ -1,5 +1,6 @@
 @use '@vonage/vvd-typography/scss/typography' as typography;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
+@use '@vonage/vvd-foundation/scss/mixins/scrim' as scrim-mixins;
 
 #title,
 #content,
@@ -47,8 +48,9 @@
 }
 
 .mdc-dialog .mdc-dialog__scrim {
-	--mdc-dialog-scrim-color: var(#{scheme-variables.$vvd-color-neutral});
-	opacity: 0.32;
+	--mdc-dialog-scrim-color: var(#{scrim-mixins.$vvd-scrim--background-color});
+	@include scrim-mixins.scrim-variables;
+	opacity: var(#{scrim-mixins.$vvd-scrim--opacity});
 }
 
 .dismiss-button {
