--- a/components/side-drawer/src/vwc-side-drawer.scss
+++ b/components/side-drawer/src/vwc-side-drawer.scss
@@ -6,6 +6,7 @@ $min-width: 280px;
 
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-typography/scss/typography' as typography;
+@use '@vonage/vvd-foundation/scss/mixins/scrim' as scrim-mixins;
 
 :host {
 	display: flex;
@@ -37,7 +38,21 @@ $min-width: 280px;
 	padding-inline-start: var(#{$vvd-side-drawer--padding}--content, #{$padding-default});
 }
 
-.vwc-surface {
-	--mdc-menu-max-height: 100%;
-	--mdc-menu-min-width: var(#{$vvd-side-drawer--min-inline-size}, $min-width);
+.vvd-side-drawer--modal {
+	position: fixed;
+	top: 0;
+	right: initial;
+	bottom: 0;
+	left: 0;
+}
+.vvd-side-drawer--scrim {
+	@include scrim-mixins.scrim-variables;
+	position: fixed;
+	z-index: -1;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background-color: var(#{scrim-mixins.$vvd-scrim--background-color});
+	opacity: var(#{scrim-mixins.$vvd-scrim--opacity});
 }
