--- a/components/card/src/vwc-card.scss
+++ b/components/card/src/vwc-card.scss
@@ -1,3 +1,5 @@
+@use '@vonage/vvd-typography/scss/typography' as typography;
+
 :host {
 	--vvd-card-width: 300px;
 	--vvd-card-info-padding: 24px;
@@ -39,11 +41,16 @@ header.no-header-content {
 }
 
 .vwc-card-header-text {
+	@include typography.typography-cat-shorthand('subtitle-2');
 	margin: auto 0;
 }
 
 header slot vwc-icon {
 	margin-right: 12px;
+}
+
+.vwc-card-content {
+	@include typography.typography-cat-shorthand('body-2');
 }
 
 .vwc-card-actions {
