--- a/components/side-drawer/src/vwc-side-drawer.scss
+++ b/components/side-drawer/src/vwc-side-drawer.scss
@@ -21,7 +21,9 @@ $min-width: 280px;
 	&:not(.vvd-side-drawer--alternate):not(.vvd-side-drawer--modal) {
 		background-color: var(#{scheme-variables.$vvd-color-neutral-10});
 	}
-	&.vvd-side-drawer--alternate,
+	&.vvd-side-drawer--alternate {
+		background-color: var(#{scheme-variables.$vvd-color-base});
+	}
 	&.vvd-side-drawer--modal {
 		background-color: var(#{scheme-variables.$vvd-color-base});
 
