--- a/components/side-drawer/src/vwc-side-drawer.scss
+++ b/components/side-drawer/src/vwc-side-drawer.scss
@@ -28,33 +28,26 @@ $min-width: 280px;
 		background-color: var(#{scheme-variables.$vvd-color-base});
 		@media screen and (prefers-reduced-motion: reduce) {
 			&.vvd-side-drawer--open {
-				animation: none;
+				transform: translateX(0%);
+				transition: none;
 			}
 		}
 
 		&.vvd-side-drawer--open {
-			animation: openDrawer 3s;
+			transform: translateX(0%);
+			transition: transform 0.5s linear;
 		}@media screen and (prefers-reduced-motion: reduce) {
 			&:not(.vvd-side-drawer--open) {
-				animation: none;
+				transform: translateX(-100%);
+				transition: none;
 			}
 		}
 		&:not(.vvd-side-drawer--open) {
-			animation: closeDrawer 3s;
+			transform: translateX(-100%);
+			transition: transform 0.5s linear;
 		}
 	}
 }
-
-@keyframes openDrawer {
-	from {transform: translateX(-100%);}
-	to {transform: translateX(0%);}
-}
-
-@keyframes closeDrawer {
-	from {transform: translateX(0%);}
-	to {transform: translateX(-100%);}
-}
-
 
 .vvd-side-drawer--top-bar {
 	display: flex;
