--- a/common/foundation/scss/mixins/color-connotation/_color-connotation-shades.mixin.scss
+++ b/common/foundation/scss/mixins/color-connotation/_color-connotation-shades.mixin.scss
@@ -1,21 +1,23 @@
 @use 'sass:selector';
+@use 'sass:map';
 @use '../../functions';
 @use 'predefined-connotations';
 @use 'variables';
 
+
 $_connotations-definition: (
-	primary: (soft: neutral-20, accent: neutral-30),
-	cta: (soft: cta-20, accent: cta-60),
-	success: (soft: success-20, accent: success-60),
-	alert: (soft: alert-20, accent: alert-60),
-	warning: (soft: warning-20, accent: warning-60),
-	info: (soft: info-20, accent: info-60),
-	announcement: (soft: announcement-20, accent: announcement-60)
+	primary: (contrast: neutral-90, soft: neutral-20, accent: neutral-30),
+	cta: (contrast: cta-80, soft: cta-20, accent: cta-60),
+	success: (contrast: neutral-90, soft: success-20, accent: success-60),
+	alert: (contrast: neutral-90, soft: alert-20, accent: alert-60),
+	warning: (contrast: neutral-90, soft: warning-20, accent: warning-60),
+	info: (contrast: neutral-90, soft: info-20, accent: info-60),
+	announcement: (contrast: neutral-90, soft: announcement-20, accent: announcement-60)
 );
 
 // override to apply relevance
 $connotations-set: predefined-connotations.$connotations-set !default;
-$selector: variables.$selector !default;
+$selector: variables.$selector !default;  //$selector: ':host([compound])' !default; //$compound-placeholder: '[compound]';
 
 $connotation-variable: #{variables.$vvd-color-connotation} !default;
 
@@ -36,4 +38,13 @@ $connotation-variable: #{variables.$vvd-color-connotation} !default;
 		}
 	}
 }
+//
+@mixin connotations-shades-default($name) {
+	:host {
+		@each $s_name, $s_value in map.get($_connotations-definition, $name) {
+			#{$connotation-variable}-#{$s_name}: var(--vvd-color-#{$s_value});
+		}
+	}
+}
+
 
