--- a/components/expansion-panel/src/vwc-expansion-panel.scss
+++ b/components/expansion-panel/src/vwc-expansion-panel.scss
@@ -28,11 +28,12 @@
 
 .expansion-panel-header {
 	@include typography.typography-cat-shorthand('subtitle-2');
-	all: unset;
 	position: relative;
 	display: flex;
 	align-items: center;
 	padding: 16px;
+	border: 0 none;
+	background: transparent;
 	cursor: pointer;
 
 	.leading-icon,
