--- a/components/expansion-panel/src/vwc-expansion-panel.scss
+++ b/components/expansion-panel/src/vwc-expansion-panel.scss
@@ -4,7 +4,7 @@
 @use '@vonage/vvd-typography/scss/typography';
 
 :host {
-	--mdc-ripple-color: var(#{scheme-variables.$vvd-color-on-base});
+	--mdc-ripple-color: var(#{scheme-variables.$vvd-color-on-canvas});
 	display: flex;
 	flex-direction: column;
 }
