--- a/components/media-controller/src/vwc-media-controller.scss
+++ b/components/media-controller/src/vwc-media-controller.scss
@@ -22,7 +22,7 @@
 	}
 
 	:focus-visible {
-		outline: var(#{scheme-variables.$vvd-color-on-base}) solid 2px;
+		outline: var(#{scheme-variables.$vvd-color-on-canvas}) solid 2px;
 	}
 
 	.main {
