--- a/components/slider/src/vwc-slider.scss
+++ b/components/slider/src/vwc-slider.scss
@@ -47,6 +47,6 @@
 }
 
 .mdc-slider.mdc-slider--disabled .mdc-slider__thumb {
-	stroke: var(#{scheme-variables.$vvd-color-base});
+	stroke: var(#{scheme-variables.$vvd-color-canvas});
 }
 
