--- a/components/snackbar/src/vwc-snackbar.scss
+++ b/components/snackbar/src/vwc-snackbar.scss
@@ -36,8 +36,8 @@
 	.vivid-snackbar {
 		display: flex;
 		flex: 1;
-		background-color: var(#{scheme-variables.$vvd-color-base});
-		color: var(#{scheme-variables.$vvd-color-on-base});
+		background-color: var(#{scheme-variables.$vvd-color-canvas});
+		color: var(#{scheme-variables.$vvd-color-on-canvas});
 	}
 
 	.note {
