--- a/common/context/src/partials/_theme.scss
+++ b/common/context/src/partials/_theme.scss
@@ -8,8 +8,8 @@
 @use 'variables';
 
 body {
-	background-color: var(#{scheme-variables.$vvd-color-base});
-	color: var(#{scheme-variables.$vvd-color-on-base});
+	background-color: var(#{scheme-variables.$vvd-color-canvas});
+	color: var(#{scheme-variables.$vvd-color-on-canvas});
 }
 
 #{variables.$vivid-scope-selector} {
@@ -44,7 +44,7 @@ body {
 
 	table {
 		thead tr {
-			border-bottom-color: var(#{scheme-variables.$vvd-color-on-base});
+			border-bottom-color: var(#{scheme-variables.$vvd-color-on-canvas});
 		}
 
 		tr {
