--- a/common/foundation/scss/mixins/_layout-mixins.scss
+++ b/common/foundation/scss/mixins/_layout-mixins.scss
@@ -30,7 +30,7 @@ $all-layouts: (
 
 %soft {
 	#{$variable-prefix}--fill: var(#{color-connotation.$vvd-color-connotation}-soft);
-	#{$variable-prefix}--text: var(#{scheme-variables.$vvd-color-on-base});
+	#{$variable-prefix}--text: var(#{scheme-variables.$vvd-color-on-canvas});
 }
 
 %text,
