--- a/common/style-coupling/src/mdc-vvd-coupling.scss
+++ b/common/style-coupling/src/mdc-vvd-coupling.scss
@@ -3,12 +3,12 @@
 :host {
 	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-primary});
 	--mdc-theme-on-primary: var(#{scheme-variables.$vvd-color-on-primary});
-	--mdc-theme-text-primary-on-background: var(#{scheme-variables.$vvd-color-on-base});
+	--mdc-theme-text-primary-on-background: var(#{scheme-variables.$vvd-color-on-canvas});
 	--mdc-theme-secondary: var(#{scheme-variables.$vvd-color-primary});
 	--mdc-theme-on-secondary: var(#{scheme-variables.$vvd-color-on-primary});
 
-	--mdc-theme-surface: var(#{scheme-variables.$vvd-color-base});
-	--mdc-theme-on-surface: var(#{scheme-variables.$vvd-color-on-base});
+	--mdc-theme-surface: var(#{scheme-variables.$vvd-color-canvas});
+	--mdc-theme-on-surface: var(#{scheme-variables.$vvd-color-on-canvas});
 
 	--mdc-theme-error: var(#{scheme-variables.$vvd-color-alert});
 }
