--- a/components/audio/src/vwc-audio.scss
+++ b/components/audio/src/vwc-audio.scss
@@ -14,7 +14,7 @@
 	}
 
 	:focus-visible {
-		outline: var(#{scheme-variables.$vvd-color-on-base}) solid 2px;
+		outline: var(#{scheme-variables.$vvd-color-on-canvas}) solid 2px;
 	}
 
 	.root {
