--- a/components/drawer/src/vwc-drawer.scss
+++ b/components/drawer/src/vwc-drawer.scss
@@ -6,25 +6,25 @@
 	top: 0;
 	border-color: var(#{scheme-variables.$vvd-color-neutral-20});
 	block-size: 100%;
-	color: var(#{scheme-variables.$vvd-color-on-base});
+	color: var(#{scheme-variables.$vvd-color-on-canvas});
 	max-block-size: 100vh;
 
 	:host([drawer-alternate]) & {
-		--mdc-theme-surface: var(#{scheme-variables.$vvd-color-base});
+		--mdc-theme-surface: var(#{scheme-variables.$vvd-color-canvas});
 	}
 	:host(:not([drawer-alternate])) & {
 		--mdc-theme-surface: var(#{scheme-variables.$vvd-color-neutral-10});
 	}
 
 	.mdc-drawer__title {
-		color: var(#{scheme-variables.$vvd-color-on-base});
+		color: var(#{scheme-variables.$vvd-color-on-canvas});
 	}
 	.mdc-drawer__subtitle {
-		color: var(#{scheme-variables.$vvd-color-on-base});
+		color: var(#{scheme-variables.$vvd-color-on-canvas});
 	}
 }
 
 .mdc-drawer-app-content {
-	background-color: var(#{scheme-variables.$vvd-color-base});
-	color: var(#{scheme-variables.$vvd-color-on-base});
+	background-color: var(#{scheme-variables.$vvd-color-canvas});
+	color: var(#{scheme-variables.$vvd-color-on-canvas});
 }
