--- a/components/file-picker/src/vwc-file-picker.scss
+++ b/components/file-picker/src/vwc-file-picker.scss
@@ -38,7 +38,7 @@
 	justify-content: center;
 	padding: 16px;
 	border: 1px dashed #ccc;
-	background-color: var(#{scheme-variables.$vvd-color-base});
+	background-color: var(#{scheme-variables.$vvd-color-canvas});
 	border-radius: 6px;
 	outline: none;
 
