--- a/components/media-controller/src/vwc-scrub-bar.scss
+++ b/components/media-controller/src/vwc-scrub-bar.scss
@@ -10,7 +10,7 @@
 	}
 
 	:focus-visible {
-		outline: var(#{scheme-variables.$vvd-color-on-base}) solid 2px;
+		outline: var(#{scheme-variables.$vvd-color-on-canvas}) solid 2px;
 	}
 
 	> div {
