--- a/components/note/src/vwc-note.scss
+++ b/components/note/src/vwc-note.scss
@@ -15,12 +15,12 @@ $border-value: 8px solid var(#{color-connotation.$vvd-color-connotation});
 	align-items: stretch;
 	padding: 20px;
 	border-left: $border-value;
-	background-color: var(#{scheme-variables.$vvd-color-base});
+	background-color: var(#{scheme-variables.$vvd-color-canvas});
 	border-radius: 6px;
 	box-shadow: inset 0 1px 0 0 var(#{scheme-variables.$vvd-color-neutral-40}),
 		inset -1px 0 0 0 var(#{scheme-variables.$vvd-color-neutral-40}),
 		inset 0 -1px 0 0 var(#{scheme-variables.$vvd-color-neutral-40});
-	color: var(#{scheme-variables.$vvd-color-on-base});
+	color: var(#{scheme-variables.$vvd-color-on-canvas});
 	contain: content;
 }
 
