--- a/components/side-drawer/src/vwc-side-drawer.scss
+++ b/components/side-drawer/src/vwc-side-drawer.scss
@@ -20,7 +20,7 @@ $vvd-side-drawer--padding: --vvd-side-drawer--padding;
 	}
 	&.vvd-side-drawer--alternate,
 	&.vvd-side-drawer--modal {
-		background-color: var(#{scheme-variables.$vvd-color-base});
+		background-color: var(#{scheme-variables.$vvd-color-canvas});
 	}
 }
 
