--- a/components/textfield/src/vwc-textfield-input.scss
+++ b/components/textfield/src/vwc-textfield-input.scss
@@ -16,7 +16,7 @@
 	background: unset;
 	block-size: 100%;
 	border-radius: var(#{textfield-variables.$vvd-textfield-shape});
-	color: var(#{scheme-variables.$vvd-color-on-base});
+	color: var(#{scheme-variables.$vvd-color-on-canvas});
 	inline-size: 100%;
 	inset: 0;
 	outline: unset;
@@ -39,7 +39,7 @@
 ::slotted(#{textfield-variables.$vvd-input-selector}:-webkit-autofill:focus) {
 	z-index: -1;
 	box-shadow: 0 0 0 30px var(#{scheme-variables.$vvd-color-neutral-20}) inset;
-	-webkit-text-fill-color: var(#{scheme-variables.$vvd-color-on-base});
+	-webkit-text-fill-color: var(#{scheme-variables.$vvd-color-on-canvas});
 }
 
 :host(:not([dense])) {
